--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 body {
     background: hsl(0, 0%, 100%);
     font-family: 'Outfit', sans-serif;
+    font-weight: 100;
 }
 
 section {
@@ -17,9 +18,19 @@ p {
 }
 
 span {
-    font-weight: 600;
+    font-weight: 500;
 }
 
+h3 {
+    color: hsl(219, 12%, 42%);
+    font-size: 17px;
+    font-weight: 200;
+}
+
+h4 {
+    color: hsl(219, 14%, 63%);
+    margin-top: 3px;
+}
 
 
 .header {
@@ -43,19 +54,25 @@ span {
 .not-col > div {
     margin-bottom: 15px;
     display: flex;
-    padding: 10px;
-    align-items: center;
+    padding: 15px;
+    /* align-items: flex-start; */
+    gap: 15px;
 }
 
 .not-col img {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
 
 }
 
 .not-col div.active{
     background: hsl(211, 68%, 94%);
-    border-radius: 25px;
+    border-radius: 15px;
+}
+
+div.active p::after{
+    content: "  ●";
+    color: hsl(1, 90%, 64%);
 }
 
 .user {
@@ -70,8 +87,22 @@ span {
 .kimberly {
     display: flex;
     justify-content: space-between;
+    gap: 15px;
 }
 
 .k-bubble {
     display: flex;
+    gap: 40px;
+}
+
+.p-rizky {
+    margin-top: 15px;
+    border: 1px solid hsl(205, 33%, 90%);
+    padding: 15px;
+}
+
+
+.bold-blue {
+    color: hsl(219, 85%, 26%);
+    font-weight: 900;
 }
